2012-04-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bibtex.ch: Do not check whether ent_str_size > buf_size and
	glob_str_size > buf_size, because buf_size can be changed dynamically,
	whereas ent_str_size and glob_str_size are constants.
 
2012-04-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h (mk_shellcmdlist, init_shell_escape,
	shell_cmd_is_allowed, normalize_quotes): Drop extern decls.
	(get_seconds_and_micros): Declare only for pdfTeX.
	(getrandomseed, callmakempx): Removed, MP only.

2012-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* cpascal.h: Define ustringcast().

2012-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mf.ch, tex.ch: Remove test for end-of-file after undump.
	* texmfmp.h: Remove weof().

2012-02-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.h: Remove old comments that gzFile is typedef'd as void *.

2012-02-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h: Moved WRITE_OUT from here ...
	* cpascal.h: ... to here for use in GFtoDVI.

	* gftodvi.ch (write_dvi): Done in C as for TeX.
	* cpascal.h: Drop writechunk, GFtoDVI now uses writedvi.

2012-02-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* vftovp.ch: Allow arbitrarily large TFM files as in TFtoPL.

2012-02-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex.ch, gftodvi.ch: Ensure dvi file size < 2GB.
	* mf.ch: Ensure gf file size < 2GB.

	* tftopl.ch: Remove unused constant tfm_size.

2012-01-24  Karl Berry  <karl@tug.org>

	* doc/web2c.texi (Common options): remove doc for the long-since
	removed option -oem.  Report from peb.

2012-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pltotf.ch, vptovf.ch: Interpret "--" as "+", not "-".

2012-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tftopl.ch, vftovp.ch: Add missing space in error message.

2012-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Check sizeof(off_t).
	* w2c/config.h: Define LONGINTEGER_TYPE and LONGINTEGER_PRId.
