@@ -2,7 +2,7 @@
 
 /* w2c/c-auto.h: defines for web2c, as determined by configure.
 
-   Copyright 1994-97, 2008, 2009, 2010 Karl Berry.
+   Copyright 1994-97, 2008-2012 Karl Berry.
    Copyright 1997-99, 2002, 2005 Olaf Weber.
 
    This program is free software: you can redistribute it and/or modify
@@ -37,9 +37,6 @@
 /* web2c: Default editor for interactive `e' option. */
 #undef EDITOR
 
-/* Define to 1 for the class `EmbFile' in <Catalog.h>. */
-#undef EMBFILE_IN_CATALOG_H
-
 /* metafont: Define to include EPSF pseudo window support. */
 #undef EPSFWIN
 
@@ -48,9 +45,6 @@
 
 /* Define to 1 if you have the `access' function. */
 #undef HAVE_ACCESS
-
-/* Define to 1 if we have the class `AnnotBorderStyle'. */
-#undef HAVE_ANNOTBORDERSTYLE
 
 /* Define to 1 if class `Annot' has the `decRefCnt' member. */
 #undef HAVE_ANNOTDECREFCNT
